data/derived/fa15/progs/unify/prog1356.ml.out
Characters 137-163:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'c * 'd
